# FastApi_NeonDB_Poetry_ToDo_App

./: pyproject.toml
fastapi_neon/: main.py  models.py  settings.py
